@@ -1,3 +1,10 @@
+2017-12-20  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/conffile.c: Parse subsection name with or without double
+	  quote
+	* installcheck/Amanda_Config.pl: Test it
+	* installcheck/Installcheck/Config.pm: set interactivity after they
+	  are defined, add add_catalog
+
 2017-12-19  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* perl/Amanda/Status.pm: Create a cache in
 	  $AMANDA_TMPDIR/cache_status/:CONF
